get user fix & get user document with property id implemented